--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Regional Sales Q1</title>
+  <title>Gatlin Rules the World!</title>
 </head>
 
 <body>
 	<h1>Gatlin</h1>
-	<img style="height:300px" src="C:\Users\gatli\DesktopCap&CoffeePic.jpg" alt="Gatlin's first Starbucks!" >
+	<img style="height:300px" src="Cap&CoffeePic.jpg" alt="Gatlin's first Starbucks!" >
 	<p>Gatlin is a South Austin native who enjoys hammocks, <br>
 p	   pimento cheese sandwiches and tossing frisbees in the backyard.</p>
 	<p>His turn-ons are waterfalls, bikini tan lines and mandolin solos.</P>
