--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Gatlin</h1>
-	<img style="height:300px" src="https://drive.google.com/file/d/17-9RiXfZxtfBsim1HOLbXBOpyY2t6gfA/view?usp=sharing" alt="Gatlin's first Starbucks!" >
+	<img src="https://drive.google.com/file/d/17-9RiXfZxtfBsim1HOLbXBOpyY2t6gfA/view?usp=sharing" alt="Gatlin and Spud!" >
 	<p>Gatlin is a South Austin native who enjoys hammocks, <br>
 p	   pimento cheese sandwiches and tossing frisbees in the backyard.</p>
 	<p>His turn-ons are waterfalls, bikini tan lines and mandolin solos.</P>
